[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resouces/fonts/kirifont/KiriFont.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Intro.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="HUB_Intro" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 50.0
margin_top = 37.0
margin_right = 463.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.909804, 0.172549, 0.0470588, 1 )
custom_fonts/font = SubResource( 1 )
text = "Descubre el codigo de colores"

[node name="Button1P" type="Button" parent="."]
margin_left = 99.0
margin_top = 229.0
margin_right = 383.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 2 )
text = "Un jugador"

[node name="Button2P" type="Button" parent="."]
margin_left = 85.0
margin_top = 397.0
margin_right = 399.0
margin_bottom = 498.0
custom_fonts/font = SubResource( 2 )
text = "Dos jugadores"

[node name="ButtonAyuda" type="Button" parent="."]
margin_left = 139.0
margin_top = 643.0
margin_right = 343.0
margin_bottom = 718.0
custom_fonts/font = SubResource( 3 )
text = "Ayuda"

[connection signal="pressed" from="Button1P" to="." method="_on_Button1P_pressed"]
[connection signal="pressed" from="Button2P" to="." method="_on_Button2P_pressed"]
[connection signal="pressed" from="ButtonAyuda" to="." method="_on_ButtonAyuda_pressed"]
